--- a/roles/dingo/templates/stop-all-component.sh.j2
+++ b/roles/dingo/templates/stop-all-component.sh.j2
@@ -17,11 +17,21 @@
 #
 
 ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
-JAR_PATH=$(find $ROOT -name dingo-*-executor-*.jar)
+JAR_PATH=$(find $ROOT -name dingo-*-coordinator-*.jar)
 
-nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
-     -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
-     -classpath ${JAR_PATH}:${STORE_JAR_PATH}  \
-     io.dingodb.server.executor.Starter \
-     --config ${ROOT}/conf/executor.yaml \
-     > ${ROOT}/log/executor.out &
+PID=`ps -eaf | grep coordinator.Starter | grep -v grep | awk '{print $2}'`
+if [[ "" !=  "$PID" ]]; then
+  echo "killing $PID"
+  kill -9 $PID
+fi
+
+PID=`ps -ef | grep executor.Starter | grep -v grep | awk '{print $2}'`
+if [[ "" !=  "$PID" ]]; then
+  echo "killing $PID"
+  kill -9 $PID
+fi
+
+PID=`ps -ef | grep dingo | grep java | grep -v grep | awk '{print $2}'`
+if [[ "" !=  "$PID" ]]; then
+   ps -ef | grep dingo | grep java | grep -v grep | awk '{print $2}' | xargs kill -9 
+fi
