[dingo] update templates about configuration of dingo

--- a/roles/dingo/templates/client.yaml.j2
+++ b/roles/dingo/templates/client.yaml.j2
@@ -5,7 +5,7 @@ client:
     options:
         coordOptions:
             group: COORDINATOR_RAFT
-            initCoordSrvList: {{ dingo_coordinator_exchange_connection_list }}
+            initCoordExchangeSvrList: {{ dingo_coordinator_exchange_connection_list }}
         cliOptions:
             timeoutMs: 10000
             maxRetry: 3
