--- a/roles/dingo/templates/coordinator.yaml.j2
+++ b/roles/dingo/templates/coordinator.yaml.j2
@@ -1,19 +1,10 @@
 cluster:
     name: dingo
-coordinator:
-    ip: {{ inventory_hostname }}
-    exchange:
-        port: {{ dingo_coordinator_exchange_port }}
-    schedule:
-        autoBalanceSplit: true
+exchange:
+    host: {{ inventory_hostname }}
+    port: {{ dingo_coordinator_exchange_port }}
+server:
+    dataPath: {{ dingo_coordinator_meta_path }}
     raft:
-        group: COORDINATOR_RAFT
         port: {{ dingo_coordinator_raft_port }}
-        initCoordRaftSvrList: {{ dingo_coordinator_raft_connection_list }}
-    options:
-        storeDBOptions:
-            dataPath: {{ dingo_coordinator_meta_path }}
-        cliOptions:
-            timeoutMs: 10000
-            maxRetry: 3
-            rpcProcessorThreadPoolSize: 4
+        initRaftSvrList: {{ dingo_coordinator_raft_connection_list }}
