--- a/roles/dingo/templates/start-driver.sh.j2
+++ b/roles/dingo/templates/start-driver.sh.j2
@@ -18,7 +18,7 @@
 ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
 JAR_PATH=$(find $ROOT -name dingo-cli-*.jar)
 
-java ${JAVA_OPTS} \
+nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
     -Dlogback.configurationFile=file:${ROOT}/conf/logback-sqlline.xml \
     -classpath ${JAR_PATH} \
     io.dingodb.cli.Tools driver \
