[dingo-deploy] update start script about dingo

--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -17,34 +17,7 @@ scrape_configs:
     - targets:
       - "localhost:{{ prometheus_port }}"
 
-  - job_name: "push-metrics"
-    static_configs:
-    - targets:
-      - "{{ pushgateway_server }}:{{ pushgateway_port }}"
-
-  - job_name: "node"
-    file_sd_configs:
-    - files:
-      - "{{ prometheus_home }}/node*.yml"
-
-  - job_name: "process"
-    static_configs:
-    - targets:
-{% for host in process_exporter_servers %}
-      - {{ host }}:{{ process_exporter_port }}
-{% endfor %}
-
-  - job_name: "blackbox"
-    metrics_path: /probe
-    params:
-      module: [tcp_connect]
-    file_sd_configs:
-    - files:
-      - "{{ prometheus_home }}/blackbox*.yml"
-    relabel_configs:
-      - source_labels: [__address__]
-        target_label: __param_target
-      - source_labels: [__param_target]
-        target_label: instance
-      - target_label: __address__
-        replacement: {{ blackbox_exporter_server }}:{{ blackbox_exporter_port }}
+  - job_name: "jmx"
+  file_sd_configs:
+  - files:
+    - {{ prometheus_home }}/jmx.json
