--- a/roles/dingo/templates/start-web.sh.j2
+++ b/roles/dingo/templates/start-web.sh.j2
@@ -16,12 +16,13 @@
 # limitations under the License.
 #
 
+set -x
 ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
-JAR_PATH=$(find $ROOT -name dingo-*-coordinator-*.jar)
+JAR_PATH=$(find $ROOT -name dingo-web*.jar)
 
 nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
-     -Dlogback.configurationFile=file:${ROOT}/conf/logback-coordinator.xml \
-     -classpath ${JAR_PATH} \
-     io.dingodb.server.coordinator.Starter \
-     --config ${ROOT}/conf/coordinator.yaml \
-     > {{ dingo_log_path }}/coordinator.out &
+     -Dlogback.configurationFile=file:${ROOT}/conf/logback-web.xml \
+     -jar ${JAR_PATH} \
+     --spring.config.location=${ROOT}/conf/application.yaml \
+     io.dingodb.web.DingoApplication \
+     > {{ dingo_log_path }}/dingo-web.out &
